feat[module-ui]: add ui sign in and sign up using HTML and CSS

--- a/index.html
+++ b/index.html
@@ -1,8 +1,23 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="public/css/style.css">
     </head>
     <body>
-
+    <div>
+    <div>
+        <div class="header">
+        <a href="#" class="home">
+            <span class="logo">Movieflix</span>
+        </a>
+        </div>
+        <div class="login">
+            <a href="uisignin.html"><button type="submit" class="btn-login">Already a member? Sign In</button></a>
+        </div>
+    </div>
+        <div class="main-text-wrapper">
+            <h1>Watch your favorite movies and shows with out any ads</h1>
+            <a href="uisignup.html"><button type="submit" class="btn-create-account">Try it free for a month</button></a>
+        </div>
+    </div>
     </body>
 </html>
