--- a/index.html
+++ b/index.html
@@ -1,23 +1,81 @@
-<html>
-    <head>
-        <link rel="stylesheet" href="public/css/style.css">
-    </head>
-    <body>
-    <div>
-    <div>
-        <div class="header">
-        <a href="#" class="home">
-            <span class="logo">Movieflix</span>
-        </a>
+<!DOCTYPE html>
+<html ng-app="movieflix" ng-controller="browseController">
+
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="public/css/bootstrap-3.3.6-dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="public/css/style.css">
+  <link rel="stylesheet" href="public/css/angular-input-stars/angular-input-stars.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+</head>
+
+<body>
+  <nav class="navbar navbar-default" id="header">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navHeaderCollapse">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#/"><img class="logo" src="public/images/logo.png"></a>
+      </div>
+
+      <div class="collapse navbar-collapse" id="navHeaderCollapse">
+        <div class="col-sm-3 col-md-3">
+          <form class="navbar-form" role="search">
+            <div class="input-group">
+              <input type="text" class="form-control" placeholder="Search your favorites" ng-model="searchText.Title" \>
+              <div class="input-group-btn">
+                <button class="btn btn-default search-icon " type="submit"><i class="glyphicon glyphicon-search"></i></button>
+              </div>
+            </div>
+          </form>
         </div>
-        <div class="login">
-            <a href="uisignin.html"><button type="submit" class="btn-login">Already a member? Sign In</button></a>
-        </div>
+        <ul class="nav navbar-nav">
+          <li><a href="#/movies">Movies</a></li>
+          <li><a href="#/tv-shows">TV Shows</a></li>
+        </ul>
+
+
+
+        <p class="navbar-text pull-right">
+          <a ng-click="login()" class="navbar-link">Login</a>
+        </p>
+      </div>
     </div>
-        <div class="main-text-wrapper">
-            <h1>Watch your favorite movies and shows with out any ads</h1>
-            <a href="uisignup.html"><button type="submit" class="btn-create-account">Try it free for a month</button></a>
-        </div>
+  </nav>
+  <div class="container-fluid">
+    <div class="row">
+       <div class="col-xs-12">
+           <div class="pull-right btn-sort">
+              <select class="form-control" ng-model="sortColumn">
+                <option value="" disabled selected>Sort by</option>
+                <option value="-Year">Year</option>
+                <option value="-imdbRating">Rating</option>
+                <option value="-imdbVotes">Votes</option>
+                <option value="Title" selected="selected">Title</option>
+              </select>
+          </div>
     </div>
-    </body>
+  </div>
+  </div>
+
+  <div>
+    <div ng-view></div>
+  </div>
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.3.3/ui-bootstrap-tpls.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.0.0/bootstrap-social.min.css"></script>
+  <script src="public/scripts/angular-input-stars.js"></script>
+  <script src="public/js/app.js"></script>
+  <script src="public/js/controllers/browseController.js"></script>
+</body>
+
 </html>
