--- a/public/html/movieInfo.html
+++ b/public/html/movieInfo.html
@@ -131,6 +131,9 @@
             <button class="btn btn-default">Add</button>
           </div>
         </form>
+        <div class="btn-movieinfo">
+          <button type="button" class="btn btn-success" ng-click="cancel()">Close</button>
+        </div>
       </div>
     </div>
   </div>
